Use layouts for QDialogs to make KmPlot adopt the sizes

Summary:
As it was pointed out "KDialog had its own layout, and when porting to QDialog, a layout needs to be added"

BUG: 407980

Test Plan:
1. Open KmPlot, choose "Catesian Plot".
2. Enter something (e.g. "x^2").
3. Click on the Equation Editor button at the right of the input field.
4. Try to resize the window (all interface items are movable now).
5. Press the Constant Editor button.
6. Try to resize the window (all interface items are movable now).
7. Close the windows.
8. Try to choose any item from the "Tools" menu.
9. Try to resize the window (all interface items should be movable).

Reviewers: #kde_edu, cfeck

Reviewed By: cfeck

Subscribers: kde-edu

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D21428